kafka-connect/kafka_connect.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-connect
  namespace: kafka-connect
spec:
  ports:
  - port: 8083
    targetPort: 8083
    name: rest-api
  selector:
    app: kafka-connect
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-connect
  namespace: kafka-connect
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka-connect
  template:
    metadata:
      labels:
        app: kafka-connect
    spec:
      enableServiceLinks: false
      containers:
      - name: kafka-connect
        image: custom-kafka-connect:0.0.3
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8083
        resources:
          requests:
            memory: "384Mi"
            cpu: "100m"
          limits:
            memory: "768Mi"
            cpu: "400m"
        volumeMounts:
        - name: connector-templates
          mountPath: /etc/kafka-connect/connectors
      volumes:
      - name: connector-templates
        configMap:
          name: kafka-connect-postgres-sink
